demo/konvoy/demo-virtual-event/maesh/apps/3-apps-servers.yaml
## Apps version 1
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: apps-v1
  namespace: apps
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: apps
        version: v1
    spec:
      serviceAccount: apps-server
      containers:
      - name: apps
        image: dduportal/webapp:maesh
        args:
          - "-image=traefik.png"
        imagePullPolicy: IfNotPresent

## Apps version 2
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: apps-v2
  namespace: apps
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: apps
        version: v2
    spec:
      serviceAccount: apps-server
      containers:
      - name: apps
        image: dduportal/webapp:maesh
        args:
          - "-image=maesh.png"
        imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: apps
  namespace: apps
  labels:
    app: apps
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: apps
  selector:
    app: apps

---
apiVersion: v1
kind: Service
metadata:
  name: apps-v1
  namespace: apps
  labels:
    app: apps
    version: v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: apps
  selector:
    app: apps
    version: v1

---
apiVersion: v1
kind: Service
metadata:
  name: apps-v2
  namespace: apps
  labels:
    app: apps
    version: v2
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: apps
  selector:
    app: apps
    version: v2
