demo/konvoy/demo-virtual-event/maesh/apps/4-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apps-client
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`aa19617a9a684415b8db49d5c2b77564-2012595479.us-west-2.elb.amazonaws.com`)
      kind: Rule
      services:
        - name: apps-client
          port: 80
